
<resources>
    <string name="app_name">eatSmart</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">eatSmart</string>
    <string name="username_text">USERNAME</string>
    <string name="password_text">PASSWORD</string>
    <string name="confirm_password_text">CONFIRM PASSWORD</string>
    <string name="button_login">SIGN IN</string>
    <string name="button_sign_up">SIGN UP</string>
    <string name="button_filter">FILTER</string>
    <string name="button_search">SEARCH</string>
    <string name="button_send">SEND</string>
    <string name="button_view_restaurant">VIEW RESTAURANT</string>
    <string name="button_rate_and_comment">RATE AND COMMENT</string>
    <string name="button_get_entry">GET SAMPLE ENTRY</string>
    <string name="title_activity_home_customer">home_customer</string>
    <string name="title_activity_splash_screen">splash_screen</string>
    <string name="text_splash">SPLASH SCREEN</string>
    <string name="welcome_customer">WELCOME Mr. Customer</string>
    <string name="title_activity_sign_up">CUSTOMER SIGN UP</string>
    <string name="title_activity_choose_sign_up">CHOOSE ACCOUNT TYPE</string>
    <string name="title_activity_restaurant_signup">RESTAURANT OWNER SIGN UP</string>
    <string name="action_search">SEARCH HERE</string>
    <string name="action_spinner">Filter</string>
    <string name="hint_restaurant_name">RESTAURANT NAME</string>
    <string name="hint_description">DESCRIPTION</string>
    <string name="hint_location">LOCATION</string>
    <string name="get_started">TAP TO GET STARTED</string>
    <string name="title_activity_filter_options">FILTER OPTIONS</string>
    <string name="text_go_to">GO TO</string>
    <string name="text_your_package">YOUR PACKAGE</string>
    <string name="text_title_cuisine">CATEGORY</string>
    <string name="text_cuisine_1">Cafe</string>
    <string name="text_cuisine_2">Dessert</string>
    <string name="text_cuisine_3">Lutong Bahay</string>
    <string name="text_cuisine_4">Bar</string>
    <string name="text_cuisine_5">Grill</string>
    <string name="text_cuisine_6">Fine Dining</string>
    <string name="text_cuisine_7">Veg</string>
    <string name="text_cuisine_8">Buffet</string>
    <string name="text_cuisine_9">Fast Food</string>
    <string name="text_title_budget">BUDGET</string>
    <string name="text_budget_1">0-100</string>
    <string name="text_budget_2">101-500</string>
    <string name="text_budget_3">501-1000</string>
    <string name="text_budget_4">1000+</string>
    <string name="text_budget_5">BUDGET 5</string>
    <string name="text_budget_6">BUDGET 6</string>
    <string name="text_location_1">Manila</string>
    <string name="text_location_2">Pasig</string>
    <string name="text_location_3">Makati</string>
    <string name="text_location_4">San Juan</string>
    <string name="text_location_5">Pasay</string>
    <string name="text_location_6">Taguig</string>
    <string name="text_rate">RATE</string>
    <string name="text_comment">COMMENT</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supersede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="welcome_Restaurant">Welcome Restaurant</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_details_restaurant">details_restaurant</string>
    <string name="title_activity_im_feeling_lucky">im_feeling_lucky</string>
    <string name="title_activity_filter">filter</string>
    <string name="title_activity_search">search</string>
    <string name="title_activity_search_result">search_result</string>
    <string name="title_activity_rate_and_comment">rate_and_comment</string>
</resources>
