<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:weightSum="1"
    tools:context=".restaurantSignUp"
    android:background="@drawable/ro_signup_3">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/name_logo_transparentbg"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/scrollView"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_restaurant_signup"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/imageView3"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/scrollView"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/editTextUserName"
        android:hint="@string/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:background="#ffffff"
        android:minWidth="300dp"
        android:minHeight="40dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:background="#ffffff"
        android:minWidth="300dp"
        android:minHeight="40dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_text"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:minWidth="300dp"
        android:minHeight="40dp"
        android:background="#ffffff"
        android:singleLine="false" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCreateAccount"
        android:layout_marginBottom="47dp"
        android:clickable="true"
        android:contentDescription="@string/button_sign_up"
        android:src="@drawable/signup_bt"
        android:maxHeight="120dp"
        android:maxWidth="120dp"
        android:minHeight="120dp"
        android:minWidth="120dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:layout_gravity="center_horizontal" />

</LinearLayout>