<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".chooseSignUP"
    android:background="@drawable/choose_acct_type">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:clickable="true"
        android:contentDescription="@string/welcome_customer"
        android:src="@drawable/customer_bt"
        android:maxHeight="160dp"
        android:maxWidth="160dp"
        android:minHeight="120dp"
        android:minWidth="120dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:background="@null"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/textView12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:clickable="true"
        android:contentDescription="@string/welcome_Restaurant"
        android:src="@drawable/resto_owner_bt"
        android:maxHeight="160dp"
        android:maxWidth="160dp"
        android:minHeight="120dp"
        android:minWidth="120dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:background="@null"
        android:layout_gravity="center_horizontal"
        android:layout_alignTop="@+id/button3"
        android:layout_alignRight="@+id/imageView4"
        android:layout_alignEnd="@+id/imageView4"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="32dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:src="@drawable/name_logo_transparentbg"
        android:maxHeight="100dp"
        android:minWidth="100dp"
        android:adjustViewBounds="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/button_sign_up"
        android:id="@+id/textView11"
        android:textColor="#ffffff"
        android:singleLine="true"
        android:typeface="sans"
        android:hint="@string/username_text"
        android:textStyle="bold"
        android:layout_marginTop="92dp"
        android:textAlignment="center"
        android:layout_below="@+id/imageView4"
        android:layout_alignRight="@+id/textView12"
        android:layout_alignEnd="@+id/textView12"
        android:layout_marginRight="52dp"
        android:layout_marginEnd="52dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_choose_sign_up"
        android:id="@+id/textView12"
        android:textColor="#ffffff"
        android:singleLine="true"
        android:typeface="sans"
        android:hint="@string/username_text"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>
