<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SignUPActivity"
    android:background="@drawable/customer_signup_bg"
    android:nestedScrollingEnabled="false">


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCreateAccount"

        android:clickable="true"
        android:contentDescription="@string/button_sign_up"
        android:src="@drawable/signup_bt"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:minHeight="100dp"
        android:minWidth="100dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:background="@null"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_sign_up"
        android:id="@+id/textView"

        android:textColor="#ffffff"
        android:singleLine="true"
        android:typeface="sans"
        android:hint="@string/username_text"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/name_logo_transparentbg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxHeight="100dp"
        android:minWidth="100dp"
        android:scaleType="fitCenter"
        android:layout_toLeftOf="@+id/buttonCreateAccount"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextUserName"
        android:minWidth="300dp"
        android:minHeight="0dp"
        android:background="@drawable/border"
        android:textAlignment="center"
        android:singleLine="true"
        android:layout_below="@+id/textView27"
        android:typeface="sans"
        android:layout_alignLeft="@+id/textView32"
        android:layout_alignStart="@+id/textView32"
        android:layout_alignRight="@+id/textView32"
        android:layout_alignEnd="@+id/textView32"
        android:height="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPassword"
        android:minWidth="300dp"
        android:background="@drawable/border"
        android:textAlignment="center"
        android:password="true"
        android:singleLine="true"
        android:layout_below="@+id/textView29"
        android:layout_alignRight="@+id/textView32"
        android:layout_alignEnd="@+id/textView32"
        android:layout_alignLeft="@+id/textView32"
        android:layout_alignStart="@+id/textView32" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextConfirmPassword"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:background="@drawable/border"
        android:textAlignment="center"
        android:password="true"
        android:singleLine="true"
        android:layout_below="@+id/textView32"
        android:layout_alignLeft="@+id/textView32"
        android:layout_alignStart="@+id/textView32"
        android:width="300dp"
        android:layout_alignRight="@+id/textView32"
        android:layout_alignEnd="@+id/textView32" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="USERNAME"
        android:id="@+id/textView27"
        android:layout_marginTop="55dp"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:singleLine="false"
        android:layout_gravity="center"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PASSWORD"
        android:id="@+id/textView29"
        android:textColor="#ffffff"
        android:layout_below="@+id/editTextUserName"
        android:layout_alignLeft="@+id/textView27"
        android:layout_alignStart="@+id/textView27"
        android:layout_marginTop="29dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CONFIRM PASSWORD"
        android:id="@+id/textView32"
        android:textColor="#ffffff"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />
</RelativeLayout>