<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jerem.eatsmart.im_feeling_lucky">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/username_text"
        android:id="@+id/textView34"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_title_cuisine"
        android:id="@+id/textView35"
        android:layout_below="@+id/textView34"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView38"
        android:layout_below="@+id/textView35"
        android:layout_toLeftOf="@+id/textView35"
        android:layout_toStartOf="@+id/textView35" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView39"
        android:layout_below="@+id/textView35"
        android:layout_alignRight="@+id/textView34"
        android:layout_alignEnd="@+id/textView34" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView40"
        android:layout_alignTop="@+id/textView39"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView41"
        android:layout_below="@+id/textView38"
        android:layout_alignLeft="@+id/textView38"
        android:layout_alignStart="@+id/textView38" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView42"
        android:layout_below="@+id/textView39"
        android:layout_alignRight="@+id/textView34"
        android:layout_alignEnd="@+id/textView34" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView43"
        android:layout_alignBottom="@+id/textView42"
        android:layout_alignLeft="@+id/textView40"
        android:layout_alignStart="@+id/textView40" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView44"
        android:layout_below="@+id/textView41"
        android:layout_alignLeft="@+id/textView41"
        android:layout_alignStart="@+id/textView41" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView45"
        android:layout_below="@+id/textView42"
        android:layout_alignLeft="@+id/textView42"
        android:layout_alignStart="@+id/textView42" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView46"
        android:layout_alignBottom="@+id/textView45"
        android:layout_alignLeft="@+id/textView43"
        android:layout_alignStart="@+id/textView43" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_title_budget"
        android:id="@+id/textView47"
        android:layout_below="@+id/textView44"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView48"
        android:layout_below="@+id/textView47"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
